fixing menu alignment

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -11,3 +11,11 @@ header {
     }
   }
 }
+
+@media (min-width: 768px) {
+  header {
+    .navbar-nav>li>a {
+      padding-top: 17px;
+    }
+  }
+}
